k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        resources:
          # limits:
          #   memory: "128Mi"
          #   cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
